# cshunter

./: README.md  cshunter.html  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
shellbags/: Cargo.toml
src/: cshunter.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: cshunter.json  main.json
src-tauri/shellbags/: Cargo.toml
src-tauri/shellbags/src/: err.rs  lib.rs  modern.rs  shellbag.rs
src-tauri/src/: analyzer.rs  browser.rs  device_id.rs  drivers.rs  emitter.rs  lib.rs  main.rs  mini_dat.rs  process.rs  shellbag.rs  steam.rs  storage.rs  tests.rs  usn_journal.rs  utils.rs  vmdetect.rs
src-tauri/src/analyzer/: README.md  analyzer.rs  context.rs  tests.rs
src-tauri/src/browser/: README.md  browser.rs  dat.rs  driver.rs  tests.rs
src-tauri/src/device_id/: README.md  device_id.rs  mod.rs  net_id.rs  shuffle.rs  tests.rs
src-tauri/src/drivers/: drivers_info.rs
src-tauri/src/emit/: events.rs
src-tauri/src/mini_dat/: mini_dat.rs  mod.rs  registry_md.rs
src-tauri/src/mini_dat/srum/: mod.rs  provider.rs  session.rs
src-tauri/src/process/: dump.rs  mod.rs  process.rs  tests.rs
src-tauri/src/restore/: export.rs  import.rs
src-tauri/src/shellbag/: mod.rs  shellbag.rs  shellbag_dat.rs  tests.rs
src-tauri/src/srum/: provider.rs  session.rs
src-tauri/src/steam/: README.md  convert.rs  mod.rs  steam.rs  tests.rs  token.rs  tree.rs
src-tauri/src/usn_journal/: README.md  mod.rs  tests.rs  usn_journal.rs  usn_record.rs  volume.rs
src-tauri/src/vmdetect/: vmdetect.rs
src/components/browser/: browser-table-data.tsx
src/components/mini_dat/: shellbag-view.tsx
src/components/preload/: preload-boxes.scss  preload-boxes.tsx
src/components/sidebar/: sidebar-provider.tsx  sidebar.tsx
src/components/ui/: pagination.tsx  provider.tsx  select.tsx  toaster.tsx
src/hooks/: storage.tsx
src/layouts/: title-layout.tsx
src/pages/cshunter/: cshunter-analyzer-page.tsx  cshunter-browsers-page.tsx  cshunter-delfiles-page.tsx  cshunter-drivers-page.tsx  cshunter-dump-page.tsx  cshunter-main-page.tsx  cshunter-mini-dat-page.tsx  cshunter-steamacc-page.tsx  cshunter-wrapper-pages.tsx
src/pages/preload/: preload-main-page.tsx
src/utils/: consts.ts  tags.ts  task.ts  tasks.ts  types.ts  utils.ts
