[package]
name = "cshunter"
version = "1.1.0"
description = "Сheating software detection applications."
authors = ["mentola", "vierimuru"]
edition = "2021"

[lib]
name = "cshunter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-opener = "2.2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.138"

windows = { version = "0.59.0", features = ["Win32_Security", "Win32_Security_Cryptography", "Win32_Security_WinTrust", "Win32_Security_Authorization", "Win32_UI_Shell", "Win32_System_Services", "Win32_NetworkManagement_Ndis", "Win32_Networking_WinSock", "Win32_NetworkManagement_IpHelper", "Win32_Graphics_Gdi", "Win32_Devices_Properties", "Win32_Devices_DeviceAndDriverInstallation", "Win32_System_SystemInformation", "Win32_Security", "Win32_System_Ioctl", "Win32_System_IO", "Win32_Storage_FileSystem", "Win32_System_Registry", "Win32_UI_WindowsAndMessaging", "Win32_System_SystemInformation", "Win32_System_Threading", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Ioctl", "Wdk_Storage_FileSystem", "Win32_Graphics_Gdi"] }
nvml-wrapper = "0.10.0"
sha2 = "0.10.8"
hex = "0.4"
reqwest = "0.12.12"
jwalk = "0.8.1"
rayon = "1.10.0"
windows-registry = "0.4.0"
regex = "1.11.1"
sqlite = "0.36.1"
whoami = "1.5.2"
rand = "0.9.0"
crc32fast = "1.4.2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
mac_address = "1.1.8"
once_cell = "1.20.3"
chrono = "0.4.39"
memmap2 = "0.9.5"
