[package]
name = "shellbags"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.59.0"
features = [
    "Win32_Foundation", 
    "Win32_System_Registry",
    "Win32_System_SystemInformation"
]

[dependencies.uuid]
version = "1.1.2"
